// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`init wizard bootstraps a scaffold with demo DDL 1`] = `
"ZTD project initialized.

Created:
 - ztd/ddl/public.sql
 - ztd.config.json
 - README.md
 - CONTEXT.md
 - .ztd/agents/manifest.json
 - .ztd/agents/root.md
 - .ztd/agents/src.md
 - .ztd/agents/tests.md
 - .ztd/agents/ztd.md
 - ztd/README.md
 - src/sql/README.md
 - src/repositories/views/README.md
 - src/repositories/tables/README.md
 - src/jobs/README.md
 - src/catalog/specs/_smoke.spec.ts
 - src/catalog/runtime/_coercions.ts
 - src/catalog/runtime/_smoke.runtime.ts
 - tests/smoke.validation.test.ts
 - tests/smoke.test.ts
 - src/db/sql-client.ts
 - src/db/sql-client-adapters.ts
 - tests/support/testkit-client.ts
 - tests/support/global-setup.ts
 - vitest.config.ts
 - tsconfig.json
 - .gitignore
 - .editorconfig
 - .prettierignore
 - .prettierrc
 - package.json

Validation configuration:
 - SQL catalog/mapping support via @rawsql-ts/sql-contract (see docs/recipes/sql-contract.md)
 - Validator backend: Zod (zod, docs/recipes/validation-zod.md)

AI guidance:
 - Internal guidance is managed under .ztd/agents/.
 - Visible AGENTS.md files are disabled by default. Enable with: ztd agents install

Next steps:
 1. If the schema file is empty, edit ztd/ddl/public.sql
 2. Run npx ztd ztd-config
 3. Provide a SqlClient implementation (adapter or mock)
 4. Run tests (pnpm test or npx vitest run)
 5. This project is nested under a parent pnpm workspace; use pnpm install --ignore-workspace for manual installs."
`;

exports[`init wizard bootstraps an empty scaffold 1`] = `
"ZTD project initialized.

Created:
 - ztd/ddl/public.sql
 - ztd.config.json
 - README.md
 - CONTEXT.md
 - .ztd/agents/manifest.json
 - .ztd/agents/root.md
 - .ztd/agents/src.md
 - .ztd/agents/tests.md
 - .ztd/agents/ztd.md
 - ztd/README.md
 - src/sql/README.md
 - src/repositories/views/README.md
 - src/repositories/tables/README.md
 - src/jobs/README.md
 - src/catalog/specs/_smoke.spec.ts
 - src/catalog/runtime/_coercions.ts
 - src/catalog/runtime/_smoke.runtime.ts
 - tests/smoke.validation.test.ts
 - tests/smoke.test.ts
 - src/db/sql-client.ts
 - src/db/sql-client-adapters.ts
 - tests/support/testkit-client.ts
 - tests/support/global-setup.ts
 - vitest.config.ts
 - tsconfig.json
 - .gitignore
 - .editorconfig
 - .prettierignore
 - .prettierrc
 - package.json

Validation configuration:
 - SQL catalog/mapping support via @rawsql-ts/sql-contract (see docs/recipes/sql-contract.md)
 - Validator backend: Zod (zod, docs/recipes/validation-zod.md)

AI guidance:
 - Internal guidance is managed under .ztd/agents/.
 - Visible AGENTS.md files are disabled by default. Enable with: ztd agents install

Next steps:
 1. If the schema file is empty, edit ztd/ddl/public.sql
 2. Run npx ztd ztd-config
 3. Provide a SqlClient implementation (adapter or mock)
 4. Run tests (pnpm test or npx vitest run)
 5. This project is nested under a parent pnpm workspace; use pnpm install --ignore-workspace for manual installs."
`;

exports[`init wizard pulls schema if pg_dump is available 1`] = `
"ZTD project initialized.

Created:
 - ztd/ddl/public.sql
 - ztd.config.json
 - README.md
 - CONTEXT.md
 - .ztd/agents/manifest.json
 - .ztd/agents/root.md
 - .ztd/agents/src.md
 - .ztd/agents/tests.md
 - .ztd/agents/ztd.md
 - ztd/README.md
 - src/sql/README.md
 - src/repositories/views/README.md
 - src/repositories/tables/README.md
 - src/jobs/README.md
 - src/catalog/specs/_smoke.spec.ts
 - src/catalog/runtime/_coercions.ts
 - src/catalog/runtime/_smoke.runtime.ts
 - tests/smoke.validation.test.ts
 - tests/smoke.test.ts
 - src/db/sql-client.ts
 - src/db/sql-client-adapters.ts
 - tests/support/testkit-client.ts
 - tests/support/global-setup.ts
 - vitest.config.ts
 - tsconfig.json
 - .gitignore
 - .editorconfig
 - .prettierignore
 - .prettierrc
 - package.json

Validation configuration:
 - SQL catalog/mapping support via @rawsql-ts/sql-contract (see docs/recipes/sql-contract.md)
 - Validator backend: Zod (zod, docs/recipes/validation-zod.md)

AI guidance:
 - Internal guidance is managed under .ztd/agents/.
 - Visible AGENTS.md files are disabled by default. Enable with: ztd agents install

Next steps:
 1. Review the dumped DDL in ztd/ddl/public.sql
 2. Run npx ztd ztd-config
 3. Provide a SqlClient implementation (adapter or mock)
 4. Run tests (pnpm test or npx vitest run)
 5. This project is nested under a parent pnpm workspace; use pnpm install --ignore-workspace for manual installs."
`;
